# Timer

./: alembic.ini  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 1b61631314dc_.py  76662f7c0738_.py  770696d3221e_.py  a3adfbbb5df7_.py  c15c18e19bbe_.py  ce94ad8fa31d_.py  f74109d5c58b_.py
src/api/v1/: routes.py
src/api/v1/endpoints/: auth.py  clients.py  projects.py  reports.py  tasks.py
src/core/: config.py  container.py  exceptions.py  security.py
src/db/: database.py
src/dependencies/: security.py
src/models/: __init__.py  clients.py  projects.py  tasks.py  user.py
src/repositories/: __init__.py  base_repository.py  clients_repository.py  projects_repository.py  tasks_repository.py  user_repository.py
src/schemas/: auth.py  clients.py  projects.py  reports.py  tasks.py
src/services/: __init__.py  auth_service.py  base_service.py  clients_service.py  projects_service.py  tasks_service.py  user_service.py
src/services/reports_services/: summary_service.py
src/services/tasks_services/: earning_service.py  tasks_service.py
src/utils/: db_utils.py  jwt.py  query_builder.py
src/validators/: auth_validator.py  base_validator.py  clients_validator.py
